--- a/course02/search/search.html
+++ b/course02/search/search.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     查询页面：
-    <form action="/search" >
+    <form action="/search" method="get" >
         <input type="text" name="name">
-        <input type="submit" >
+        <input type="submit" value="提交">
     </form>
 </body>
 </html>
