修改描述错误

--- a/course03/02_cors.html
+++ b/course03/02_cors.html
@@ -8,7 +8,7 @@
 </head>
 <body>
         <!-- http://127.0.0.1:5500/course03/01_jsonp.html       -->
-    <button id="button">点我发ajax请求</button>
+    <button id="button">点我发cors请求</button>
     <script type="text/javascript">
         // 点击事件
         document.querySelector("#button").onclick = function(){
